--- a/exams/instructions-open-exam.ipynb
+++ b/exams/instructions-open-exam.ipynb
@@ -48,20 +48,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'str' object has no attribute 'exists'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 13\u001b[0m\n\u001b[1;32m     10\u001b[0m MODULES_DIR \u001b[38;5;241m=\u001b[39m BASE_DIR \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m/modules\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;66;03m# Check if expected directories exist\u001b[39;00m\n\u001b[0;32m---> 13\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m DATA_DIR\u001b[38;5;241m.\u001b[39mexists():\n\u001b[1;32m     14\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWarning: Data directory \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mDATA_DIR\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m not found. Check your file structure.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     16\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m MODULES_DIR\u001b[38;5;241m.\u001b[39mexists():\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'str' object has no attribute 'exists'"
+     ]
+    }
+   ],
    "source": [
     "from pathlib import Path\n",
     "import sys\n",
     "import pandas as pd\n",
     "\n",
     "# Get the directory of the notebook (assumes Jupyter Notebook is always used)\n",
-    "BASE_DIR = Path().resolve()\n",
+    "BASE_DIR = '/Users/aparnaambarapu/Documents/UChicago/Winter_2024/fixed_income/exam-open-AMBARAPU-APARNA'\n",
     "\n",
     "# Define paths for data and modules\n",
-    "DATA_DIR = BASE_DIR / \"data\"\n",
-    "MODULES_DIR = BASE_DIR / \"modules\"\n",
+    "DATA_DIR = BASE_DIR + \"/data\"\n",
+    "MODULES_DIR = BASE_DIR + \"/modules\"\n",
     "\n",
     "# Check if expected directories exist\n",
     "if not DATA_DIR.exists():\n",
@@ -82,6 +94,13 @@
     "else:\n",
     "    print(f\"Warning: '{EXAMPLE_DATA_PATH.name}' not found. Ensure it's in the correct directory.\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -100,7 +119,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
